2003-04-14  Philippe Elie  <phil.el@wanadoo.fr>

	* dae/opd_kernel.c:
	* dae/opd_proc.c:
	* dae/oprofiled.c:
	* utils/opcontrol:
	* doc/oprofile.1.in:
	* doc/oprofile.xml: handle --vm-nolinux

	* daemon/opd_kernel.c: use /no-vmlinux not /no-vmlinux when user
	  specify --no-vmlinux

2003-04-08  John Levon  <levon@movementarian.org>

	* HACKING: describe what happens with oprofile-www

2003-04-08  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil++/op_bfd.cpp: check for #717720 and direct user to
	  FAQ if detected. Note than we don't detect all symptom of this bug.

2003-04-08  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil++/op_exception.h: op_runtime_error is no longer abstract

	* libregex/op_regex.h: comment and tidy
	* libregex/op_regex.cpp: tidy

2003-04-07  Philippe Elie  <phil.el@wanadoo.fr>

	* pp/op_to_source.cpp: make each line be prefixed with the samples
	counts. It was too hard to find samples inside prevous format.

2003-04-07  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil++/string_manip.cpp: work around for gcc 2.95
	* p/op_to_source.cpp: minor cleanup

2003-04-07  John Levon  <levon@movementarian.org>

	* pp/op_to_source.cpp: cheat a bit to get
	better indentatioon on the default setup, by
	widening counter width to 7.

2003-04-07  John Levon  <levon@movementarian.org>

	* pp/op_to_source.cpp: append symbol summary
	annotations separate from the prolog samples on
	the same line.

2003-04-07  John Levon  <levon@movementarian.org>

	* pp/op_to_source.cpp: only output line 0 annotation
	if samples found there.

2003-04-07  John Levon  <levon@movementarian.org>

	* utils/opcontrol: make sure --ctrX-event=none gets noticed

2003-04-06  John Levon  <levon@movementarian.org>

	* libutil++/string_manip.h:
	* libutil++/string_manip.cpp: remove ws_prefix(). Add
	format_percent().

	* pp/op_to_source.cpp: make each line be prefixed with
	the sample counts, instead of on a line above, to preserve
	line numbering.
